# node

./: .gitignore  LICENSE  readme.md
1.typescript/: package-lock.json  package.json
10.typescript.next.drag-drop.dos/: package-lock.json  package.json
14.next.fastapi.jwt/: .env
15.next.next-intl/: package-lock.json  package.json
16.next.next-intl/: package-lock.json  package.json
17.fastapi.pytest/: pyproject.toml
18.fastapi.pytest.docker/: Dockerfile  docker-compose.yml  pyproject.toml
19.fastapi.pytest.sqlalchemy.docker/: docker-compose.yml
2.ts.drizzle/: package.json
2.ts.node.drizzle/: package-lock.json
20.fastapi.pytest.sqlalchemy.docker/: docker-compose.yml
20.fastapi.pytest.sqlalchemy.docker/backend/: Dockerfile  pyproject.toml
20.fastapi.pytest.sqlalchemy.docker/backend/api/: models.py
20.fastapi.pytest.sqlalchemy.docker/backend/api/routers/: users.py
20.fastapi.pytest.sqlalchemy.docker/backend/test/: conftest.py  test_main.py
21.fastapi.pytest.mongodb.docker/: docker-compose.yml
21.fastapi.pytest.mongodb.docker/backend/: Dockerfile  pyproject.toml
21.fastapi.pytest.mongodb.docker/backend/api/: database.py  main.py
22.typescript.next.drag-drop/: package-lock.json  package.json
3.ts.jest/: jest.config.ts  package-lock.json  package.json
4.ts.node.drizzle.jest/: package-lock.json  package.json
5.ts.next.drizzle.jest/: package-lock.json  package.json
6.ts.next.drizzle.jest.auth/: drizzle.config.ts  next.config.ts  package-lock.json  package.json
7.ts.next.drizzle.docker/: docker-compose.yml  drizzle.config.ts  package.json  (+1 more)
(+164 files in other folders)
