[project]
name = "20-fastapi-pytest-sqlalchemy-docker"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "fastapi[standard]>=0.116.1",
    "pytest>=8.4.1",
    "sqlalchemy>=2.0.43",
    "sqlalchemy-utils>=0.41.2",
]

[tool.pytest.ini_options]
pythonpath = "."
