[project]
name = "backend"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "fastapi[standard]>=0.116.1",
    "mongomock>=4.3.0",
    "motor>=3.7.1",
    "pytest>=8.4.1",
    "pytest-asyncio>=1.1.0",
    "pytest-docker>=3.2.3",
]

[tool.pytest.ini_options]
pythonpath = "."
asyncio_mode = "auto"